# tomba2-decomp

./: .gitignore  CHEATSHEET.md  MAPPING.md  Makefile  README.md  REFACTOR.md  STRUCTURE.json  STRUCTURE.md  diff_settings.py  generate_allocator.py  index.idx  main.ld  scus_strings.txt  sdat2img.py  sdat2img_composite.py  sdat2img_v2.py  sdat2img_v3.py  symbol_addrs.txt  tomba2.ld  undefined_funcs_auto.txt  undefined_syms_auto.txt  vram2png.py
tools/ghidra-mcp/: .env.template  .gitignore  .markdownlintrc  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  build.gradle  ghidra-mcp-setup.ps1  pyproject.toml  start-oracle.ps1
tools/ghidra-mcp/.github/: MARKDOWN_NAMING_GUIDE.md
tools/ghidra-mcp/.github/workflows/: codeql.yml  pre-release.yml  release-regression.yml  release.yml  scorecard.yml  tests.yml
tools/ghidra-mcp/debugger/: engine.py  server.py
tools/ghidra-mcp/docker/: Dockerfile  docker-compose.multi.yml  docker-compose.yml  nginx.conf
tools/ghidra-mcp/docs/: Context-Window-Analysis.md  GHIDRA_VARIABLE_APIS_EXPLAINED.md  HUNGARIAN_NOTATION.md  JAVA_HANDLER_REFACTORING.md  MARKDOWN_NAMING.md  MAVEN_VERSION_MANAGEMENT.md  MULTI_PROGRAM_SUPPORT_ANALYSIS.md  NAMING_CONVENTIONS.md  PLATE_COMMENT_BEST_PRACTICES.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE_SCRIPTS.md  SESSION_SUMMARY_DOCUMENTATION_SYSTEM.md  WORKFLOW_DOCUMENTATION_PROPAGATION.md
tools/ghidra-mcp/docs/prompts/: BINARY_DOCUMENTATION_ORDER.md  CROSS_VERSION_FUNCTION_MATCHING.md  CROSS_VERSION_MATCHING_COMPREHENSIVE.md  DATA_SECTION_WORKFLOW.md  DATA_TYPE_INVESTIGATION_QUICK.md  ORPHANED_CODE_DISCOVERY_WORKFLOW.md  STRING_LABELING_CONVENTION.md  TOOL_USAGE_GUIDE.md
tools/ghidra-mcp/docs/releases/: README.md  RELEASE_CHECKLIST.md
tools/ghidra-mcp/fun-doc/: README.md  conformance_protected.json  conformance_workbench.py  fun_doc.py  web.py  workbench_selftest.py
tools/ghidra-mcp/fun-doc/benchmark/runs/: 20260521T130811_664492.json
tools/ghidra-mcp/fun-doc/db/: migrate.py
tools/ghidra-mcp/fun-doc/db/migrations/: 0004_selector_flags.sql  0004_selector_flags.sqlite.sql
tools/ghidra-mcp/fun-doc/prompts/: fix-labels.md  fix-magic-numbers.md  fix-ordinals.md  fix-plate-comment.md  fix-struct-access.md
tools/ghidra-mcp/fun-doc/scripts/: migrate_state_to_sql.py
tools/ghidra-mcp/fun-doc/storage/: models.py
tools/ghidra-mcp/ghidra_scripts/: AnalyzeConventionDistribution.java  AnalyzeUnmatchedFunctions.java  ApplyDWORD.java  ApplySuggestions_V2.java  ArgumentsUnifier.py  BSimBulkQuery.java  BSimIngestProgram.java  BSimQueryAndPropagate.java  BSimTestConnection.java  BatchPropagateToAllVersions.java  BatchPropagateToAllVersions_ProjectFolder.java  BuildHashIndex_Auto.java  BuildHashIndex_ProjectFolder.java  BuildHashIndex_V2.java  CheckInAllPrograms.java  ClearAllComments.java  ClearAndDisasm.java  ClearAndDisasm6f876960.java  ClearCallReturnOverrides.java  ClearFunctionComments.java  ClearPrePostComments.java  ComputeBinaryDependencyOrder_ProjectFolder.java  DeleteFunctionAt.java  ExportAllEnhanced.java  ExportFunctionIndex.java  ExportFunctionsToJSON.java  FindFunctionsAfterPadding.java  FindFunctionsAfterPaddingAllPrograms.java  FindFunctionsAfterPaddingWrapper.java  FindFunctionsAtINT3.java  HashStrategyTester.java  HelloMcpTest.java  IdentifyAndRenameHashMatches.java  Imports fixer.py  PropagateDocsCrossVersion.java  PropagateFromIndex_Auto.java  PropagateFromIndex_V2.java  ProperSizeStringsScript.java  RecreateProcessUnitAttribute.java  RemoveDecompilerComments.java  (+6 more)
tools/ghidra-mcp/logs/: .gitkeep  README.md
tools/ghidra-mcp/python/bridge_mcp_ghidra/: __init__.py  __main__.py  cli.py  config.py  debugger.py  discovery.py  dispatch.py  registry.py  schema.py  server.py  state.py  static_tools.py  transport.py  validation.py
tools/ghidra-mcp/src/main/java/com/xebyte/: GhidraMCPPlugin.java
tools/ghidra-mcp/src/main/java/com/xebyte/core/: AnalysisService.java  AnnotationScanner.java  BinaryComparisonService.java  DataTypeService.java  EmulationService.java  Param.java  (+26 more)
tools/ghidra-mcp/src/main/resources/: extension.properties
tools/ghidra-mcp/src/test/java/com/xebyte/: GarArchiveRestoreTest.java  GzfExportImportTest.java
tools/ghidra-mcp/tests/: conftest.py  endpoints.json  run_tests.py  test_address_spaces.py
tools/ghidra-mcp/tests/integration/: test_phase3_datatypes.py  test_phase4_advanced.py  test_readonly_endpoints.py  test_reference_endpoints.py
tools/ghidra-mcp/tests/performance/: test_globals_worker.py  test_migrate_sqlite_idempotent.py  test_migration.py  test_storage_sqlite.py  test_worker_watchdog.py
tools/ghidra-mcp/tests/unit/: __init__.py  test_bridge_cli.py  test_bridge_utils.py  test_debugger_engine.py  test_debugger_server.py  test_endpoint_catalog.py  test_gradle_tasks.py  test_mcp_tool_functions.py  test_mcp_tools.py  test_project_consistency.py  test_response_schemas.py  test_setup_cli.py  test_setup_ghidra.py  test_setup_requirements.py  test_transport_network.py  test_versioning.py
tools/ghidra-mcp/tools/context_analysis/: README.md  advanced_context_analysis.py  measure_context.py
tools/ghidra-mcp/tools/scyllahide/: README.md
tools/ghidra-mcp/tools/setup/: cli.py  ghidra.py  requirements.py  version_bump.py  versioning.py
tools/ghidra-mcp/workflows/: README.md
(+13130 files in other folders)
